# bibot

./: Cargo.toml  README.md
bibot/: .env.example  Cargo.toml  README.md
bibot/sample_data/: entry.json  luma_events_api.json  luma_events_api_01.json
bibot/src/: main.rs  sample_luma.rs
bibot/src/commands/: bibot.rs  dice.rs  iss.rs  linkedin.rs  luma.rs  mod.rs  notion.rs  turso.rs  version.rs  weather.rs
db/: Cargo.toml  README.md
