[package]
name = "bibot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
rusticnotion = { path = "vendor/rusticnotion" }
poise = "0.6.1"
rand = "0.8.5"
reqwest = "0.12.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
shuttle-runtime = "0.46.0"
shuttle-serenity = "0.46.0"
tokio = "1.38.0"
tracing = "0.1.40"
ical = "0.11.0"
