[package]
name = "bibot"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
rusticnotion = { path = "vendor/rusticnotion" }
poise = "0.6.1"
rand = "0.8.5"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
shuttle-runtime = "0.47"
shuttle-serenity = "0.47"
tokio = "1.40.0"
tracing = "0.1.40"
ical = "0.11.0"
scraper = "0.20"
