[package]
name = "bibot"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
chrono-tz = "0.10.0"
db = { path = "../db" }
dotenvy = "0.15.7"
poise = "0.6.1"
rand = "0.8.5"
reqwest = "0.12.7"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }

